src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Header__c</fullName>
        <label>Assessment Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Notes__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Section__c</fullName>
        <label>Assessment Section</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Service_Type__c</fullName>
        <label>Default Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activity group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community support service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day care and support (establishment based)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (one to one)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer support group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered home care and support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singing for the Brain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>Active_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Assessment_Header__c</columns>
        <columns>Default_Service_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Assessments</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assessment_Header__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AST-{000000}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>